--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <div class="parallax-text">
         <!-- Below, we use an h1 tag for the text we are going to display. Feel free to use any sort of text element for this (h1, h2, p, etc) -->
         <h1>This text appears to float over the image as you scroll</h1>
-        <p>
+        <p> Adding text here </p>
           <em> Thank you Rachel Claire for this photo from Pexels. </em>
         </p>
       </div>
